# saco-measure

./: .gitignore  README.md
ML/: roboflow.ipynb  robotflow.sh  train.py  yoloV11_to_tfjs.py
ML/JupyterX/trainYolo/: Ultralytics_HUB.ipynb
ML/train_on_win/trainX/src/: Ultralytics_HUB.ipynb  trainX.py  ultraltics.py
eApp/: README.md  electron-builder.yml  electron.vite.config.mjs  package-lock.json  package.json
eApp/src/main/: index.js  proxyX.js
eApp/src/preload/: index.js  proxyX.js
eApp/src/renderer/: index.html  src  src_mac.sh  src_win.bat
proxyApp/: fileBrowser.html  package-lock.json  package.json  proxy.js  useStoreS.js
pyApp/: SotaTool_mk3.py  pyproject.toml  requirements.txt  requirements_backup.txt  requirements_ori.txt  ruff.toml  sacoMain.py  sarcoFullAI.py  ubuntuPythonInit.sh  yolo2tf.py
pyApp/src/sarcomeasure/: mainX.py
pyApp/xlinx/: Dockerfile  SotaTool_decade_tw.py  SotaTool_mk3.py  requirements2.txt  sarcoFullAI.py  yolo2tf.py
vApp/: README.md  index.html  package-lock.json  package.json  vite.config.js
vApp/src/: App.css  App.jsx  main.jsx
vApp/src/model/: StoreX.jsx  WebsocketClientR.js  xlinx.js
vApp/src/view/: App2.css  App2.jsx  GalleryX.jsx  OnePage.jsx  PAGEX1.jsx  PAGEX2.jsx  PAGEX3.jsx  PAGEX4.jsx  UploadX.jsx
vApp/src/yolo/: YOLO.jsx
